# Alphawords

./: .flake8  .gitignore  .pre-commit-config.yaml  CI_FIXES.md  COLAB_FIXES.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  REAL_ENGLISH_SETUP.md  SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_real_english.py
.github/: SECRETS.md  WORKFLOWS.md
.github/workflows/: build.yml  ci.disabled.yml  ci.yml  deploy.yml  disabled.yml  release.yml  simple.yml  test.yml
alphascrabble/: __init__.py  cli.py  config.py  selfplay.py
alphascrabble/engine/: __init__.py  features.py  mcts.py  movegen.py
alphascrabble/lexicon/: __init__.py  gaddag.py  gaddag_loader.py  move_generator.py
alphascrabble/nn/: __init__.py  dataset.py  evaluate.py  loss.py  model.py  train.py
alphascrabble/rules/: __init__.py  bag.py  board.py  tiles_en.py
alphascrabble/training/: __init__.py  selfplay.py
alphascrabble/utils/: __init__.py  io.py  logging.py  seeding.py  tb_writer.py
colab/: AlphaScrabble_Colab.ipynb  COLAB_SETUP.md  README.md  demo.py  install.sh  quick_start.py  requirements.txt
cpp/: CMakeLists.txt  qlex_wrapper.cpp
scripts/: README.md  backup.sh  benchmark.sh  check.sh  check_environment.sh  clean.sh  deploy.sh  dev_setup.sh  help.sh  init.sh  install.sh  quick_demo.sh  rebuild.sh  refresh.sh  reset.sh  restart.sh  restore.sh  run_demo.sh  run_tests.sh  setup_lexicon.sh  start.sh  start_web.sh  status.sh  stop.sh  uninstall.sh  update.sh  version.sh
scripts/lexicon_setup/: README.md  download_real_dictionaries.py  setup_english_lexicon.sh  validate_real_dictionaries.py
tests/: __init__.py  test_end2end_smoke.py  test_mcts_basic.py  test_movegen.py  test_real_english_simulations.py  test_rules.py
web/: app.py  index.html  requirements.txt
web/templates/: index.html
