[metadata]
name = alphascrabble
version = 0.1.0
description = AlphaZero-style Scrabble engine with MCTS and neural networks
long_description = file: README.md
long_description_content_type = text/markdown
author = AlphaScrabble Team
author_email = alphascrabble@example.com
url = https://github.com/alphascrabble/alphascrabble
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: C++
    Topic :: Games/Entertainment
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.0.0
    numpy>=1.24.0
    pandas>=2.0.0
    pyarrow>=12.0.0
    rich>=13.0.0
    tensorboard>=2.13.0
    tqdm>=4.65.0
    click>=8.1.0
    pytest>=7.4.0
    pytest-cov>=4.1.0

[options.packages.find]
include = alphascrabble*

[options.extras_require]
dev =
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.5.0

[options.entry_points]
console_scripts =
    alphascrabble = alphascrabble.cli:main

[build_ext]
define = CMAKE_BUILD_TYPE=Release
cmake_args = -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_BUILD_TYPE=Release

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
